feat: implement worker manager & implement SetMessageAutoSend
feat: remove httpin dependency
